--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "preact": "^10.1.0",
     "preact-render-to-string": "^5.1.2",
+    "preact-router": "^3.2.1",
     "react-router-dom": "^6.2.1"
   }
 }
